# mikage-collector

./: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml  scan.sh  serve.sh  serve.yml
.kiro/settings/: mcp.json
.kiro/specs/autocollector/: design.md  requirements.md  tasks.md
src/mikage_collector/: __init__.py  cli.py
src/mikage_collector/definitions/builtin/: apigateway.yaml  apigatewayv2.yaml  dynamodb.yaml  ec2.yaml  ecs.yaml  efs.yaml  elbv2.yaml  lambda.yaml  rds.yaml  route53.yaml  s3.yaml  servicediscovery.yaml
src/mikage_collector/mcp/: __init__.py  server.py
src/mikage_collector/scanner/: __init__.py  definition.py  engine.py  executor.py
