[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mikage-collector"
version = "0.1.0"
description = "AWS resource scanner with definition-file-driven scanning and boto3 introspection MCP server"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Infrabbit" },
]

dependencies = [
    "boto3>=1.35.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "jmespath>=1.0.0",
    "tenacity>=8.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "moto>=5.0.0",
    "boto3-stubs[ec2,rds,ecs,lambda,elbv2,s3,sts]>=1.35.0",
]

[project.scripts]
autocollector = "mikage_collector.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mikage_collector"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
